# w_hilsman_adobe_th

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: main.yaml  terraform-apply.yml  terraform-plan.yml  test-lambda.yml
docs/: 2026-03-30_SearchKeywordPerformance.tab  event_hit_site.sql
processer/: agg.py  test_agg.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  variables.tf
terraform/modules/s3/: main.tf
